--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,6 @@
-require:
- - rubocop-sorbet
- - rubocop-rspec
+plugins:
+  - rubocop-rspec
+  - rubocop-sorbet
 
 AllCops:
   NewCops: enable
@@ -33,6 +33,9 @@ Naming/MethodParameterName:
   Enabled: false
 
 RSpec/ExampleLength:
+  Enabled: false
+
+RSpec/MultipleExpectations:
   Enabled: false
 
 Style/Documentation:
